--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
     "@aws-sdk/client-s3": "^3.614.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.8.0",
