--- a/angular.json
+++ b/angular.json
@@ -13,10 +13,22 @@
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+      "i18n": {
+        "sourceLocale": "en",
+        "locales": {
+          "ru": {
+            "translation": "src/locale/messages.ru.xlf"
+          },
+          "uk": {
+            "translation": "src/locale/messages.uk.xlf"
+          }
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "localize": true,
             "outputPath": "dist/blog",
             "index": "src/index.html",
             "browser": "src/main.ts",
