Setup translate merging

--- a/angular.json
+++ b/angular.json
@@ -104,9 +104,15 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "ng-extract-i18n-merge:ng-extract-i18n-merge",
           "options": {
-            "buildTarget": "blog:build"
+            "buildTarget": "blog:build",
+            "format": "xlf",
+            "outputPath": "src/locale",
+            "targetFiles": [
+              "messages.ru.xlf",
+              "messages.uk.xlf"
+            ]
           }
         },
         "test": {
