--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
             npm run build || true
 
             # Запустить приложение с помощью PM2
-            pm2 start /root/blog/dist/blog/proxy-server.mjs --name "blog-site" --env PORT=80
+            pm2 start ~/ecosystem.config.js --env production
 
             # Сохранить процесс PM2 (автозапуск)
             pm2 save
