--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "src/public",
+                "output": "."
+              }
             ],
             "styles": [
               "src/styles.scss"
