--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@aws-sdk/client-s3": "^3.614.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@splidejs/splide": "^4.1.4",
+    "@types/morgan": "^1.9.9",
     "express": "^4.18.2",
     "firebase-admin": "^12.3.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
