--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@splidejs/splide": "^4.1.4",
     "@types/morgan": "^1.9.9",
     "express": "^4.18.2",
+    "express-ipfilter": "^1.3.2",
+    "express-rate-limit": "^7.5.0",
     "firebase-admin": "^12.3.1",
+    "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.8.0",
