--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uid": "^2.0.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
