--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
 
             # Проверить работоспособность приложения
             echo "Checking application health..."
-            curl -s -o /dev/null -w "%{http_code}" http://194.37.80.72/ | grep -q "200" && echo 'Application is running' || { echo 'Application is not running'; exit 1; }
+            curl -s -o /dev/null -w "%{http_code}" https://waves-and-mountains.blog/ | grep -q "200" && echo 'Application is running' || { echo 'Application is not running'; exit 1; }
 
             # Сохранить процесс PM2 (автозапуск)
             echo "Saving PM2 state..."
