--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.8.0",
+    "spdy": "^4.0.2",
     "tslib": "^2.3.0",
     "uid": "^2.0.2",
     "zone.js": "~0.14.3"
